--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <div class="phone-container" >
             <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
             </div> 
+            <div class="no-phone-message">
+              <h2 class="text-warning text-center d-none p-5" id="no-phone-message"> No Phone Available</h2>
+            </div>
+        </div>
+        <div id="spinner" class="spinner d-none">
+          <div class="d-flex justify-content-center">
+            <div class="spinner-border text-warning" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
         </div>
         
     </main>
