--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <div class="no-phone-message">
               <h2 class="text-warning text-center d-none p-5" id="no-phone-message"> No Phone Available</h2>
             </div>
+<div class="viewBtn text-center">
+  <button id="view-all d-none" class="btn btn-primary text-center"> View All </button>
+</div>
         </div>
         <div id="spinner" class="spinner d-none">
           <div class="d-flex justify-content-center">
