--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
             </div>
           </div>
         </div>
+
+        <div class="">
+          <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="displayModalDetails" tabindex="-1" aria-labelledby="displayModalDetailsLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content" id="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="displayModalDetailsLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+          <!-- Scrollable modal -->
+        </div>
         
     </main>
 
